Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35114

QTextTableFormat shows wrong type

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • 5.3.0 RC1
    • 5.1.1, 5.2.0
    • GUI: Font handling
    • None

      QTextTableFormat::type() gives QTextFormat::FrameFormat whereas it should give QTextFormat::TableFormat.
      Error is in constructor of QTextTableFormat that doesn't set correctly attribute "format_type" (line 2817 of qtextformat.cpp).
      File main.cpp reproduces the issue.

        1. main.cpp
          0.3 kB
          Michele Mocciola
        For Gerrit Dashboard: QTBUG-35114
        # Subject Branch Project Status CR V

            laknoll Lars Knoll
            mickele Michele Mocciola
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes