src/gui/text/qtextformat.cpp
@@ -524,7 +524,7 @@ Q_GUI_EXPORT QDataStream &operator>>(QDataStream &stream, QTextFormat &fmt)
     \value BlockFormat The object formats a text block
     \value CharFormat The object formats a single character
     \value ListFormat The object formats a list
-    \value TableFormat The object formats a table
+    \omitvalue TableFormat Unused Value, a table's FormatType is FrameFormat.
     \value FrameFormat The object formats a frame
 
     \value UserFormat
